# hedyPET

./: .env.example  .gitignore  README.md  data_splits.json  pyproject.toml
analysis/: dynamic.py  static.py  totalseg_ct_classes.json  utils.py
hedypet/: utils.py
hedypet/analysis/: utils.py
hedypet/preprocessing/: bids.py  extract_organ_tacs.py  make_input_function_rois.py  make_norm_consts.py  make_pipeline_bodydyn.py  make_pipeline_bodystat.py  make_pipeline_head.py  registration.py  resample.py
readouts/: metadata.csv  metadata_80.csv
reconstructions/: README.md  acdynPSF.txt  acstatPSF.txt
src/hedypet/: utils.py
src/hedypet/analysis/: acstatPSF_means.ipynb  figures.ipynb  patlak.ipynb  patlak.py  seg-synthseg_classes.json  seg-tissue-classes.json  seg-total-classes.json  synthseg_classes.json
src/hedypet/preprocessing/: bids.py  normalization.py  resampling.py  tacs.py  utils.py
src/hedypet/scripts/: 01_make_pipeline_bodystat.py  01_make_pipeline_head.py  02_make_pipeline_bodystat.py  02_make_pipeline_head.py  03_make_pipeline_bodydyn.py  04_make_normalization_consts.py  05_make_input_function_rois.py  06_extract_tacs.py  06_extract_tacs_and_means.py  06_extract_tacs_ct.py  07_combine_to_dataframes.ipynb
