[project]
name = "hedyPET"
version = "0.1.0"
description = "Preprocessing and evaluation scripts for the hedyPET dataset"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "antspyx>=0.5.4",
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "nibabel>=5.3.2",
    "nifti-dynamic>=0.1.0",
    "opencv-python>=4.12.0.88",
    "parse>=1.20.2",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
